# gen/servergrpc/moving/moving.pb.go
@@ -32,10 +32,10 @@ var file_moving_proto_rawDesc = []byte{
 	0x6f, 0x67, 0x6c, 0x65, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x61, 0x6e, 0x6e, 0x6f, 0x74, 0x61, 0x74,
 	0x69, 0x6f, 0x6e, 0x73, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x1a, 0x19, 0x70, 0x61, 0x72, 0x61,
 	0x6d, 0x73, 0x2f, 0x63, 0x72, 0x65, 0x61, 0x74, 0x65, 0x5f, 0x6f, 0x72, 0x64, 0x65, 0x72, 0x2e,
-	0x70, 0x72, 0x6f, 0x74, 0x6f, 0x1a, 0x17, 0x70, 0x61, 0x72, 0x61, 0x6d, 0x73, 0x2f, 0x61, 0x6c,
-	0x6c, 0x5f, 0x6f, 0x72, 0x64, 0x65, 0x72, 0x73, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x1a, 0x19,
+	0x70, 0x72, 0x6f, 0x74, 0x6f, 0x1a, 0x17, 0x70, 0x61, 0x72, 0x61, 0x6d, 0x73, 0x2f, 0x67, 0x65,
+	0x74, 0x5f, 0x6f, 0x72, 0x64, 0x65, 0x72, 0x73, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x1a, 0x19,
 	0x70, 0x61, 0x72, 0x61, 0x6d, 0x73, 0x2f, 0x75, 0x70, 0x64, 0x61, 0x74, 0x65, 0x5f, 0x6f, 0x72,
-	0x64, 0x65, 0x72, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x32, 0x93, 0x03, 0x0a, 0x0d, 0x4d, 0x6f,
+	0x64, 0x65, 0x72, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x32, 0x8f, 0x03, 0x0a, 0x0d, 0x4d, 0x6f,
 	0x76, 0x69, 0x6e, 0x67, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x96, 0x01, 0x0a, 0x0b,
 	0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x4f, 0x72, 0x64, 0x65, 0x72, 0x12, 0x33, 0x2e, 0x69, 0x6e,
 	0x67, 0x76, 0x61, 0x72, 0x6d, 0x61, 0x74, 0x74, 0x69, 0x73, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69,
@@ -46,24 +46,24 @@ var file_moving_proto_rawDesc = []byte{
 	0x76, 0x31, 0x2e, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x4f, 0x72, 0x64, 0x65, 0x72, 0x52, 0x65,
 	0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x1c, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x16, 0x3a, 0x01,
 	0x2a, 0x22, 0x11, 0x2f, 0x76, 0x31, 0x2f, 0x6f, 0x72, 0x64, 0x65, 0x72, 0x73, 0x2f, 0x63, 0x72,
-	0x65, 0x61, 0x74, 0x65, 0x12, 0x6f, 0x0a, 0x09, 0x41, 0x6c, 0x6c, 0x4f, 0x72, 0x64, 0x65, 0x72,
+	0x65, 0x61, 0x74, 0x65, 0x12, 0x6b, 0x0a, 0x09, 0x47, 0x65, 0x74, 0x4f, 0x72, 0x64, 0x65, 0x72,
 	0x73, 0x12, 0x16, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f,
 	0x62, 0x75, 0x66, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x1a, 0x32, 0x2e, 0x69, 0x6e, 0x67, 0x76,
 	0x61, 0x72, 0x6d, 0x61, 0x74, 0x74, 0x69, 0x73, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65,
-	0x73, 0x2e, 0x6d, 0x6f, 0x76, 0x69, 0x6e, 0x67, 0x2e, 0x76, 0x31, 0x2e, 0x41, 0x6c, 0x6c, 0x4f,
-	0x72, 0x64, 0x65, 0x72, 0x73, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x16, 0x82,
-	0xd3, 0xe4, 0x93, 0x02, 0x10, 0x12, 0x0e, 0x2f, 0x76, 0x31, 0x2f, 0x6f, 0x72, 0x64, 0x65, 0x72,
-	0x73, 0x2f, 0x67, 0x65, 0x74, 0x12, 0x78, 0x0a, 0x0b, 0x55, 0x70, 0x64, 0x61, 0x74, 0x65, 0x4f,
-	0x72, 0x64, 0x65, 0x72, 0x12, 0x33, 0x2e, 0x69, 0x6e, 0x67, 0x76, 0x61, 0x72, 0x6d, 0x61, 0x74,
-	0x74, 0x69, 0x73, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x73, 0x2e, 0x6d, 0x6f, 0x76,
-	0x69, 0x6e, 0x67, 0x2e, 0x76, 0x31, 0x2e, 0x55, 0x70, 0x64, 0x61, 0x74, 0x65, 0x4f, 0x72, 0x64,
-	0x65, 0x72, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x16, 0x2e, 0x67, 0x6f, 0x6f, 0x67,
-	0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x45, 0x6d, 0x70, 0x74,
-	0x79, 0x22, 0x1c, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x16, 0x3a, 0x01, 0x2a, 0x22, 0x11, 0x2f, 0x76,
-	0x31, 0x2f, 0x6f, 0x72, 0x64, 0x65, 0x72, 0x73, 0x2f, 0x75, 0x70, 0x64, 0x61, 0x74, 0x65, 0x42,
-	0x24, 0x5a, 0x22, 0x2e, 0x2f, 0x67, 0x65, 0x6e, 0x2f, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x67,
-	0x72, 0x70, 0x63, 0x2f, 0x6d, 0x6f, 0x76, 0x69, 0x6e, 0x67, 0x3b, 0x73, 0x65, 0x72, 0x76, 0x65,
-	0x72, 0x67, 0x72, 0x70, 0x63, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x73, 0x2e, 0x6d, 0x6f, 0x76, 0x69, 0x6e, 0x67, 0x2e, 0x76, 0x31, 0x2e, 0x47, 0x65, 0x74, 0x4f,
+	0x72, 0x64, 0x65, 0x72, 0x73, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x12, 0x82,
+	0xd3, 0xe4, 0x93, 0x02, 0x0c, 0x12, 0x0a, 0x2f, 0x76, 0x31, 0x2f, 0x6f, 0x72, 0x64, 0x65, 0x72,
+	0x73, 0x12, 0x78, 0x0a, 0x0b, 0x55, 0x70, 0x64, 0x61, 0x74, 0x65, 0x4f, 0x72, 0x64, 0x65, 0x72,
+	0x12, 0x33, 0x2e, 0x69, 0x6e, 0x67, 0x76, 0x61, 0x72, 0x6d, 0x61, 0x74, 0x74, 0x69, 0x73, 0x2e,
+	0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x73, 0x2e, 0x6d, 0x6f, 0x76, 0x69, 0x6e, 0x67, 0x2e,
+	0x76, 0x31, 0x2e, 0x55, 0x70, 0x64, 0x61, 0x74, 0x65, 0x4f, 0x72, 0x64, 0x65, 0x72, 0x52, 0x65,
+	0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x16, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70,
+	0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x22, 0x1c, 0x82,
+	0xd3, 0xe4, 0x93, 0x02, 0x16, 0x3a, 0x01, 0x2a, 0x1a, 0x11, 0x2f, 0x76, 0x31, 0x2f, 0x6f, 0x72,
+	0x64, 0x65, 0x72, 0x73, 0x2f, 0x75, 0x70, 0x64, 0x61, 0x74, 0x65, 0x42, 0x24, 0x5a, 0x22, 0x2e,
+	0x2f, 0x67, 0x65, 0x6e, 0x2f, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x67, 0x72, 0x70, 0x63, 0x2f,
+	0x6d, 0x6f, 0x76, 0x69, 0x6e, 0x67, 0x3b, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x67, 0x72, 0x70,
+	0x63, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var file_moving_proto_goTypes = []any{
@@ -71,14 +71,14 @@ var file_moving_proto_goTypes = []any{
 	(*emptypb.Empty)(nil),       // 1: google.protobuf.Empty
 	(*UpdateOrderRequest)(nil),  // 2: ingvarmattis.services.moving.v1.UpdateOrderRequest
 	(*CreateOrderResponse)(nil), // 3: ingvarmattis.services.moving.v1.CreateOrderResponse
-	(*AllOrdersResponse)(nil),   // 4: ingvarmattis.services.moving.v1.AllOrdersResponse
+	(*GetOrdersResponse)(nil),   // 4: ingvarmattis.services.moving.v1.GetOrdersResponse
 }
 var file_moving_proto_depIdxs = []int32{
 	0, // 0: ingvarmattis.services.moving.v1.MovingService.CreateOrder:input_type -> ingvarmattis.services.moving.v1.CreateOrderRequest
-	1, // 1: ingvarmattis.services.moving.v1.MovingService.AllOrders:input_type -> google.protobuf.Empty
+	1, // 1: ingvarmattis.services.moving.v1.MovingService.GetOrders:input_type -> google.protobuf.Empty
 	2, // 2: ingvarmattis.services.moving.v1.MovingService.UpdateOrder:input_type -> ingvarmattis.services.moving.v1.UpdateOrderRequest
 	3, // 3: ingvarmattis.services.moving.v1.MovingService.CreateOrder:output_type -> ingvarmattis.services.moving.v1.CreateOrderResponse
-	4, // 4: ingvarmattis.services.moving.v1.MovingService.AllOrders:output_type -> ingvarmattis.services.moving.v1.AllOrdersResponse
+	4, // 4: ingvarmattis.services.moving.v1.MovingService.GetOrders:output_type -> ingvarmattis.services.moving.v1.GetOrdersResponse
 	1, // 5: ingvarmattis.services.moving.v1.MovingService.UpdateOrder:output_type -> google.protobuf.Empty
 	3, // [3:6] is the sub-list for method output_type
 	0, // [0:3] is the sub-list for method input_type
@@ -93,7 +93,7 @@ func file_moving_proto_init() {
 		return
 	}
 	file_params_create_order_proto_init()
-	file_params_all_orders_proto_init()
+	file_params_get_orders_proto_init()
 	file_params_update_order_proto_init()
 	type x struct{}
 	out := protoimpl.TypeBuilder{
