# gen/servergrpc/moving/moving_grpc.pb.go
@@ -21,7 +21,7 @@ const _ = grpc.SupportPackageIsVersion9
 
 const (
 	MovingService_CreateOrder_FullMethodName = "/ingvarmattis.services.moving.v1.MovingService/CreateOrder"
-	MovingService_AllOrders_FullMethodName   = "/ingvarmattis.services.moving.v1.MovingService/AllOrders"
+	MovingService_GetOrders_FullMethodName   = "/ingvarmattis.services.moving.v1.MovingService/GetOrders"
 	MovingService_UpdateOrder_FullMethodName = "/ingvarmattis.services.moving.v1.MovingService/UpdateOrder"
 )
 
@@ -30,7 +30,7 @@ const (
 // For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
 type MovingServiceClient interface {
 	CreateOrder(ctx context.Context, in *CreateOrderRequest, opts ...grpc.CallOption) (*CreateOrderResponse, error)
-	AllOrders(ctx context.Context, in *emptypb.Empty, opts ...grpc.CallOption) (*AllOrdersResponse, error)
+	GetOrders(ctx context.Context, in *emptypb.Empty, opts ...grpc.CallOption) (*GetOrdersResponse, error)
 	UpdateOrder(ctx context.Context, in *UpdateOrderRequest, opts ...grpc.CallOption) (*emptypb.Empty, error)
 }
 
@@ -52,10 +52,10 @@ func (c *movingServiceClient) CreateOrder(ctx context.Context, in *CreateOrderRe
 	return out, nil
 }
 
-func (c *movingServiceClient) AllOrders(ctx context.Context, in *emptypb.Empty, opts ...grpc.CallOption) (*AllOrdersResponse, error) {
+func (c *movingServiceClient) GetOrders(ctx context.Context, in *emptypb.Empty, opts ...grpc.CallOption) (*GetOrdersResponse, error) {
 	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
-	out := new(AllOrdersResponse)
-	err := c.cc.Invoke(ctx, MovingService_AllOrders_FullMethodName, in, out, cOpts...)
+	out := new(GetOrdersResponse)
+	err := c.cc.Invoke(ctx, MovingService_GetOrders_FullMethodName, in, out, cOpts...)
 	if err != nil {
 		return nil, err
 	}
@@ -77,7 +77,7 @@ func (c *movingServiceClient) UpdateOrder(ctx context.Context, in *UpdateOrderRe
 // for forward compatibility.
 type MovingServiceServer interface {
 	CreateOrder(context.Context, *CreateOrderRequest) (*CreateOrderResponse, error)
-	AllOrders(context.Context, *emptypb.Empty) (*AllOrdersResponse, error)
+	GetOrders(context.Context, *emptypb.Empty) (*GetOrdersResponse, error)
 	UpdateOrder(context.Context, *UpdateOrderRequest) (*emptypb.Empty, error)
 	mustEmbedUnimplementedMovingServiceServer()
 }
@@ -92,8 +92,8 @@ type UnimplementedMovingServiceServer struct{}
 func (UnimplementedMovingServiceServer) CreateOrder(context.Context, *CreateOrderRequest) (*CreateOrderResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method CreateOrder not implemented")
 }
-func (UnimplementedMovingServiceServer) AllOrders(context.Context, *emptypb.Empty) (*AllOrdersResponse, error) {
-	return nil, status.Errorf(codes.Unimplemented, "method AllOrders not implemented")
+func (UnimplementedMovingServiceServer) GetOrders(context.Context, *emptypb.Empty) (*GetOrdersResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method GetOrders not implemented")
 }
 func (UnimplementedMovingServiceServer) UpdateOrder(context.Context, *UpdateOrderRequest) (*emptypb.Empty, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method UpdateOrder not implemented")
@@ -137,20 +137,20 @@ func _MovingService_CreateOrder_Handler(srv interface{}, ctx context.Context, de
 	return interceptor(ctx, in, info, handler)
 }
 
-func _MovingService_AllOrders_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+func _MovingService_GetOrders_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
 	in := new(emptypb.Empty)
 	if err := dec(in); err != nil {
 		return nil, err
 	}
 	if interceptor == nil {
-		return srv.(MovingServiceServer).AllOrders(ctx, in)
+		return srv.(MovingServiceServer).GetOrders(ctx, in)
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: MovingService_AllOrders_FullMethodName,
+		FullMethod: MovingService_GetOrders_FullMethodName,
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(MovingServiceServer).AllOrders(ctx, req.(*emptypb.Empty))
+		return srv.(MovingServiceServer).GetOrders(ctx, req.(*emptypb.Empty))
 	}
 	return interceptor(ctx, in, info, handler)
 }
@@ -185,8 +185,8 @@ var MovingService_ServiceDesc = grpc.ServiceDesc{
 			Handler:    _MovingService_CreateOrder_Handler,
 		},
 		{
-			MethodName: "AllOrders",
-			Handler:    _MovingService_AllOrders_Handler,
+			MethodName: "GetOrders",
+			Handler:    _MovingService_GetOrders_Handler,
 		},
 		{
 			MethodName: "UpdateOrder",
